--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.example.jetpackcomposelessons'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.jetpackcomposelessons"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -47,11 +47,14 @@ android {
 }
 
 dependencies {
+    def nav_version = "2.7.0"
 
-    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+    implementation("io.coil-kt:coil-compose:2.4.0")
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.2'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
